# healthcare-ml-project

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py  model_loader.py  routes.py  schemas.py
database/: db_connection.py  models.py  queries.sql
frontend/: index.html  predict.html
ml/: evaluate.py  predict.py  preprocess.py  train.py
models/: encoder_admission_type.joblib  encoder_blood_type.joblib  encoder_insurance_provider.joblib  encoder_medical_condition.joblib  encoder_medication.joblib  encoder_target.joblib  xgboost_model.joblib
scripts/: clean.py  ingest.py  load.py  scheduler.py
